Fixed to use es6 file extentions.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "file-system-es6",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Written on top of default implementation of FileSystem. Includes extra functionality.",
-  "main": "index.js",
+  "main": "main.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
