--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "file-system-es6",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Written on top of default implementation of FileSystem. Includes extra functionality.",
   "type": "module",
   "main": "file-system.main.mjs",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/PatrykSitko/FileSystem.js.git"
+    "url": "git+https://github.com/PatrykSitko/file-system-es6.git"
   },
   "keywords": [
     "JavaScript",
@@ -25,7 +25,7 @@
   "author": "Patryk Sitko",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/PatrykSitko/FileSystem.js/issues"
+    "url": "https://github.com/PatrykSitko/file-system-es6/issues"
   },
-  "homepage": "https://github.com/PatrykSitko/FileSystem.js#readme"
+  "homepage": "https://github.com/PatrykSitko/file-system-es6#readme"
 }
